--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -1,5 +1,83 @@
 <footer class="footer">
 
+    <div class="footer__slogan">
+        <img src="<%=require(`@assets/img/icons/footer_slogan.svg`)%>" alt="Оставайтесь на связи">
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <ul class="footer__footer-contacts footer-contacts">
+                    <li class="footer-contacts__item">
+                        <a href="tel:+74959999999" class="footer-contacts__link">+7(495)999-99-99</a>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <a href="mailto:info@elxr.ru" class="footer-contacts__link">info@elxr.ru</a>
+                    </li>
+                </ul>
+
+                <div class="footer__notice">
+                    Биологически активная добавка к пище "Эл Икс Ар"
+                    Не является лекарственным средством
+                    Перед применением проконсультируйтесь с врачом
+                </div>
+
+                <div class="footer__footer-links footer-links">
+                    <ul class="footer-links__list">
+                        <li class="footer-links__item">
+                            <a href="" class="footer-links__link">Политика конфеденциальности.</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-8">
+                <div class="footer__footer-socials footer-socials">
+                    <ul class="footer-socials__list">
+                        <li class="footer-socials__item">
+                            <a target="_blank" rel="nofollow" class="footer-socials__link" href="">
+                                <svg width="124" height="103" viewBox="0 0 124 103" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M66.0832 80.7381C61.3266 85.2854 56.5947 89.7509 51.8874 94.3228C50.0554 96.0844 48.7327 96.6744 46.6625 96.4367C46.835 93.8476 46.9993 91.2503 47.1801 88.653C47.6483 82.4587 48.1166 76.2726 48.4698 70.0784C48.4806 69.3831 48.6426 68.6984 48.9447 68.0717C49.2469 67.445 49.6819 66.8912 50.2197 66.4487C66.8856 51.6458 83.5076 36.7829 100.086 21.8599C100.757 21.3007 101.381 20.6868 101.951 20.0245C102.657 19.1478 102.288 18.2957 101.178 18.3858C100.088 18.4949 99.034 18.8387 98.0896 19.3936C90.4741 24.0639 82.8915 28.7997 75.3089 33.5192C61.5238 42.1332 47.7414 50.7527 33.9618 59.3777C33.5529 59.6569 33.0823 59.8332 32.5902 59.8917C32.0981 59.9502 31.5991 59.8891 31.1358 59.7136C22.5263 57.0098 13.8839 54.3797 5.29084 51.6677C3.96965 51.2656 2.71144 50.6809 1.55294 49.9307C-0.336557 48.6934 -0.558367 46.7434 1.19968 45.3259C2.80625 44.0385 4.60169 43.0049 6.52312 42.2616C33.6168 31.8504 60.7269 21.472 87.8534 11.1264C96.8901 7.67698 105.927 4.19476 114.964 0.794469C116.264 0.25065 117.661 -0.0279406 119.071 -0.0248774C122.168 0.138992 124.173 2.5151 123.951 6.00551C123.689 8.88515 123.214 11.7415 122.53 14.5513C116.763 41.5897 110.968 68.6281 105.146 95.6666C104.812 97.1885 104.305 98.6674 103.635 100.075C103.177 101.203 102.297 102.11 101.181 102.604C100.065 103.097 98.8005 103.14 97.6542 102.721C96.2251 102.291 94.8743 101.636 93.6534 100.779C84.8385 94.413 76.0893 87.9729 67.3155 81.5574C66.9212 81.2788 66.5433 81.0412 66.0832 80.7381Z"
+                                        fill="white" />
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socials__item">
+                            <a target="_blank" rel="nofollow" class="footer-socials__link" href="">
+                                <svg width="55" height="111" viewBox="0 0 55 111" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M50.9367 61.4666H35.6144V111.001H15.9213V61.4666H0V41.6789H15.9213V40.049C15.9213 34.556 15.8241 29.0549 16.0751 23.5701C16.3907 16.6346 18.6085 10.3756 23.9507 5.64059C26.9842 2.94335 30.7238 1.18093 34.7241 0.563282C41.4746 -0.545089 48.209 0.23729 55.0405 0.815925V18.4439C54.5467 18.4439 54.1258 18.4928 53.6887 18.5009C50.1597 18.5009 46.6225 18.4032 43.1096 18.6069C38.4069 18.8758 35.9787 21.3126 35.7844 26.0721C35.5982 31.2309 35.7844 36.3734 35.7844 41.6382H53.4216C52.6122 48.2965 51.8028 54.7919 50.9367 61.4666Z"
+                                        fill="white" />
+                                </svg>
+                            </a>
+
+                        </li>
+                        <li class="footer-socials__item">
+                            <a target="_blank" rel="nofollow" class="footer-socials__link" href="">
+                                <svg width="106" height="106" viewBox="0 0 106 106" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M52.887 105.955C45.0825 105.955 37.2805 105.955 29.481 105.955C22.3454 106.076 15.4227 103.523 10.075 98.7968C6.89699 96.1164 4.35158 92.766 2.62135 88.9858C0.891131 85.2055 0.0189826 81.0892 0.0674746 76.9321C-0.0127259 60.9722 -0.0127259 45.0123 0.0674746 29.0524C0.0402571 22.8712 2.00426 16.8455 5.66868 11.8675C9.33311 6.88952 14.5032 3.22388 20.4133 1.41332C23.3168 0.54518 26.3302 0.0995075 29.3607 0.0900131C45.1126 -0.000212427 60.9021 -0.000212427 76.6915 0.0373816C89.6765 0.0373816 100.707 7.99979 104.601 20.3381C105.491 23.2788 105.947 26.3335 105.955 29.4058C106.083 45.1276 106.037 60.8494 106.007 76.5712C106.007 89.5863 98.1652 100.511 85.7517 104.519C82.7319 105.414 79.6006 105.877 76.4509 105.895C68.5787 106.082 60.7291 105.955 52.887 105.955ZM53.0299 82.0299C58.773 82.0254 64.3858 80.318 69.1585 77.1236C73.9312 73.9292 77.6495 69.3913 79.8432 64.0836C82.0368 58.776 82.6073 52.9371 81.4825 47.3052C80.3577 41.6733 77.5882 36.5015 73.524 32.4437C69.4599 28.3858 64.2837 25.6243 58.6501 24.5082C53.0165 23.3922 47.1785 23.9718 41.8743 26.1737C36.5701 28.3756 32.0379 32.1009 28.8509 36.8786C25.6639 41.6563 23.9653 47.2717 23.9697 53.0148C23.9995 60.7087 27.0722 68.0784 32.5169 73.5146C37.9615 78.9508 45.3359 82.012 53.0299 82.0299ZM93.4509 19.8118C93.4224 18.1243 92.8942 16.4832 91.9331 15.0959C90.9719 13.7086 89.621 12.6374 88.0511 12.0178C86.4812 11.3983 84.7628 11.2581 83.1133 11.6151C81.4637 11.9721 79.9571 12.8102 78.7838 14.0234C77.6105 15.2366 76.8234 16.7704 76.5218 18.431C76.2202 20.0916 76.4178 21.8043 77.0896 23.3526C77.7614 24.9008 78.8771 26.2152 80.2958 27.1293C81.7145 28.0435 83.3724 28.5165 85.0599 28.4885C87.3214 28.445 89.4737 27.5078 91.0461 25.8819C92.6185 24.2559 93.4831 22.0735 93.4509 19.8118Z"
+                                        fill="white" />
+                                    <path
+                                        d="M75.7668 52.9396C75.7757 57.4406 74.4498 61.8432 71.9567 65.5908C69.4636 69.3383 65.9153 72.2625 61.7605 73.9935C57.6056 75.7246 53.0307 76.1848 48.6143 75.316C44.1979 74.4472 40.1383 72.2883 36.9487 69.1125C33.7592 65.9366 31.5829 61.8862 30.6951 57.4736C29.8074 53.061 30.2479 48.4842 31.9611 44.3219C33.6743 40.1596 36.5832 36.5988 40.32 34.0897C44.0568 31.5805 48.4537 30.2357 52.9548 30.2253C55.9456 30.2134 58.9093 30.7921 61.676 31.9282C64.4427 33.0643 66.9578 34.7354 69.0772 36.8457C71.1966 38.956 72.8785 41.464 74.0265 44.2257C75.1744 46.9875 75.7658 49.9487 75.7668 52.9396Z"
+                                        fill="white" />
+                                    <path
+                                        d="M84.962 22.7668C84.4041 22.7742 83.8565 22.6159 83.3886 22.312C82.9207 22.008 82.5535 21.5721 82.3335 21.0593C82.1134 20.5466 82.0505 19.9801 82.1526 19.4316C82.2547 18.883 82.5172 18.3771 82.907 17.9779C83.2968 17.5786 83.7962 17.304 84.3421 17.1887C84.8881 17.0735 85.4559 17.1228 85.9738 17.3304C86.4917 17.5381 86.9363 17.8947 87.2514 18.3552C87.5665 18.8156 87.7379 19.3592 87.7439 19.9172C87.7348 20.6585 87.4408 21.3679 86.9229 21.8984C86.405 22.4289 85.7029 22.7398 84.962 22.7668Z"
+                                        fill="white" />
+                                </svg>
+                            </a>
+
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
