--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,27 +2,30 @@
 
   <main class="frontpage">
     <section class="frontpage__hero hero">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="hero__img">
-
+      <div class="hero__wrap">
+        <div class="hero__stars hero__stars--layer--1"></div>
+        <div class="hero__stars hero__stars--layer--2"></div>
+        <div class="hero__stars hero__stars--layer--3"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="hero__img">
+              </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="hero__heading">
-              Инновационное решение для физического и эмоционального восстановления
+            <div class="col-md-6">
+              <div class="hero__heading">
+                Инновационное решение для физического и эмоционального восстановления
+              </div>
+              <a href="" class="hero__btn">Заказать</a>
             </div>
-            <a href="" class="hero__btn">Заказать</a>
           </div>
         </div>
-      </div>
-
-      <div class="hero__helper-arrow">
-        <svg width="52" height="19" viewBox="0 0 52 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M1 1L22.286 16.0507C24.3621 17.5186 27.1379 17.5186 29.214 16.0507L50.5 1" stroke="white"
-            stroke-width="2" />
-        </svg>
+        <div class="hero__helper-arrow">
+          <svg width="52" height="19" viewBox="0 0 52 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 1L22.286 16.0507C24.3621 17.5186 27.1379 17.5186 29.214 16.0507L50.5 1" stroke="white"
+              stroke-width="2" />
+          </svg>
+        </div>
       </div>
 
     </section>
