--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,31 +1,112 @@
 .footer {
-    border-top: 1px solid #CCCCCC;
+    padding-top: rem(200px);
+    padding-bottom: rem(80px);
+    color: #fff;
 
-    &__wrap {
+    &__content {
+        margin-top: rem(76px);
+    }
+
+    &__notice {
+        font-size: rem(14px);
+        margin-bottom: rem(36px);
+    }
+
+}
+
+
+.footer-contacts {
+    &__list {
+        @include unlist;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    &__item {
+        margin-right: rem(32px);
+        margin-bottom: rem(18px);
+    }
+
+    &__link {
+        color: #fff;
+        text-decoration: none;
+        font-size: rem(20px);
+
+        &:hover {
+            color: #fff;
+        }
+    }
+}
+
+
+
+.footer-links {
+    &__list {
+        @include unlist;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    &__item {
+        margin-right: rem(32px);
+        margin-bottom: rem(18px);
+    }
+
+    &__link {
+        color: #fff;
+        text-decoration: none;
+        font-size: rem(14px);
+        border-bottom: 1px solid #fff;
+        padding-bottom: rem(6px);
+        display: flex;
+
+        &:hover {
+            color: #fff;
+        }
+    }
+}
+
+.footer-socials {
+    &__list {
+        @include unlist;
         display: flex;
         align-items: center;
-        padding: rem(26px 10px);
+    }
 
-        @include media-breakpoint-down(sm) {
-            flex-direction: column;
+    &__item {
+        margin-left: rem(36px);
+
+        &:nth-of-type(even) {
+            animation: socialsFloatReverse 4s linear infinite;
+        }
+
+        &:nth-of-type(odd) {
+            animation: socialsFloat 4s linear infinite;
+            animation-direction: reverse;
         }
     }
 
     &__link {
-        color: $accent;
+        color: #fff;
         text-decoration: none;
-        margin-left: rem(16px);
+        width: 228px;
+        height: 228px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(255, 255, 255, 0.5);
+        border-radius: 50%;
 
-        @include media-breakpoint-down(sm) {
-            margin: rem(20px 0);
+        img,svg {
+            max-width: 60%;
+            max-height: 60%;
         }
-    }
 
-    &__apps {
-        margin-left: auto;
-
-        @include media-breakpoint-down(sm) {
-            margin: auto;
+        @include media-breakpoint-down(xl) {
+            width: 144px;
+            height: 144px;
         }
     }
 }
