--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,59 +1,25 @@
 .header {
-    background-color: #1E4356;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    padding: rem(32px 0);
 
     &__wrap {
-        padding: rem(16px 10px);
         display: flex;
         align-items: center;
+        justify-content: space-between;
+    }
 
-        @include media-breakpoint-down(sm) {
-            flex-direction: column;
+    &__toggler {
+        span {
+            width: 40px;
+            height: 2px;
+            background:#fff;
+            display: block;
+            margin-bottom: rem(12px);
         }
     }
 
-    &__logo {
-        font-weight: 500;
-        text-decoration: none;
-        font-size: rem(24px);
-        line-height: 1;
-        color: #FFFFFF;
-        margin-right: auto;
-
-        &:hover {
-            color: #fff;
-        }
-
-        @include media-breakpoint-down(sm) {
-            margin: auto;
-            margin-bottom: rem(16px);
-        }
-    }
-
-}
-
-.apps {
-    &__wrap {
-        display: flex;
-        align-items: center;
-    }
-
-    &__title {
-        font-size: rem(18px);
-        color: #fff;
-        margin-right: rem(18px);
-
-        @include media-breakpoint-down(sm) {
-            display: none;
-        }
-    }
-
-    &__list {
-        @include unlist;
-        display: flex;
-        align-items: center;
-    }
-
-    &__item {
-        margin-left: rem(18px);
-    }
 }
