--- a/src/assets/scss/pages/_frontpage.scss
+++ b/src/assets/scss/pages/_frontpage.scss
@@ -2,21 +2,67 @@ $shadows-small: multiple-box-shadow(700);
 $shadows-medium: multiple-box-shadow(200);
 $shadows-big: multiple-box-shadow(100);
 
-@keyframes animStar {
-    from {
-        transform: translateY(0px);
+.frontpage {
+
+    &__wrap {
+        background-color: $dark;
     }
 
-    to {
-        transform: translateY(-3000px);
+    &__advantage-block {
+        position: relative;
+        z-index: 100;
+
+        &-circle {
+            height: 740px;
+            width: 740px;
+            left: 52vw;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            z-index: 1;
+            border: 2px solid #fff;
+            border-radius: 50%;
+            position: fixed;
+            opacity: 0;
+            transition: 500ms opacity, 1s transform;
+            pointer-events: none;
+
+            @include media-breakpoint-down(xl) {
+                left: 46vw;
+            }
+
+            &::after {
+                content: '';
+                background-color: #fff;
+                border-radius: 50%;
+                position: absolute;
+                width: 65px;
+                height: 65px;
+                bottom: -32.5px;
+                left: calc(50% - 32.5px);
+            }
+        }
     }
+
+    &__foot {
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 400% 400%;
+        animation: gradient 15s ease infinite;
+    }
+
 }
 
 .hero {
 
     &__wrap {
-        background: radial-gradient(ellipse at bottom, #03070E 0%, #03070E 100%);
         height: 100vh;
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+
+    &__row {
+        align-items: center;
     }
 
     &__stars {
@@ -35,6 +81,7 @@ $shadows-big: multiple-box-shadow(100);
                 height: 1px;
                 box-shadow: $shadows-small;
                 animation: animStar 50s linear infinite;
+                animation-fill-mode: forwards;
 
                 &:after {
                     width: 1px;
@@ -48,6 +95,7 @@ $shadows-big: multiple-box-shadow(100);
                 height: 2px;
                 box-shadow: $shadows-medium;
                 animation: animStar 100s linear infinite;
+                animation-fill-mode: forwards;
 
                 &:after {
                     width: 2px;
@@ -61,6 +109,7 @@ $shadows-big: multiple-box-shadow(100);
                 height: 3px;
                 box-shadow: $shadows-big;
                 animation: animStar 150s linear infinite;
+                animation-fill-mode: forwards;
 
                 &:after {
                     width: 3px;
@@ -69,5 +118,460 @@ $shadows-big: multiple-box-shadow(100);
                 }
             }
         }
+    }
+
+    &__content {
+        max-width: 400px;
+        margin-left: auto;
+    }
+
+    &__img {
+        width: 100%;
+        max-width: 620px;
+        position: relative;
+        z-index: 100;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    &__heading {
+        font-size: rem(22px);
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 400;
+        margin-bottom: rem(135px);
+        line-height: 128%;
+    }
+
+    &__btn {
+        @extend %btn-outline;
+        margin-left: auto;
+        display: flex;
+        width: 100%;
+        max-width: 200px;
+    }
+
+    &__helper-arrow {
+        display: block;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 80px;
+        z-index: 10;
+        margin: auto;
+        animation: float 3s ease-in-out infinite;
+        animation-fill-mode: forwards;
+    }
+}
+
+.use-cases {
+
+    &__wrap {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    &__heading {
+        font-size: rem(42px);
+        color: #FFFFFF;
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: rem(86px);
+    }
+
+    &__carousel {
+        position: relative;
+
+        &-control {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: auto;
+
+            &--prev {
+                left: 0;
+            }
+
+            &--next {
+                right: 0;
+            }
+        }
+    }
+
+    &__clouds-wrap {
+        position: absolute;
+        height: 50vh;
+        width: 100vw;
+        top: 30vh;
+        transform: translateX(0);
+        animation: clouds 200s linear infinite;
+        animation-fill-mode: backwards;
+    }
+
+    &__clouds {
+        position: absolute;
+
+        &:nth-of-type(2) {
+            left: 60vw;
+        }
+
+        &:nth-of-type(3) {
+            left: -60vw;
+        }
+    }
+
+
+    &__cloud {
+        position: absolute;
+        z-index: 0;
+        display: block;
+
+        &--1 {
+            left: -60px;
+            top: -220px;
+        }
+
+        &--2 {
+            top: -220px;
+            right: -30px;
+        }
+
+        &--3 {
+            left: -150px;
+            bottom: -40px;
+        }
+
+        &--4 {
+            right: -150px;
+            bottom: -40px;
+        }
+    }
+
+    &__case-item {
+        width: 100%;
+        position: relative;
+        z-index: 10;
+    }
+}
+
+.case-item {
+
+    &__wrap {
+        text-align: center;
+        max-width: 655px;
+        width: 100%;
+        margin: rem(60px auto);
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @include media-breakpoint-down(lg) {
+            max-width: 475px;
+        }
+    }
+
+    &__img {
+        display: block;
+        margin: auto;
+        animation: float 4s ease-in-out infinite;
+        animation-fill-mode: forwards;
+        position: absolute;
+        z-index: 1;
+    }
+
+    &__title {
+        font-weight: 400;
+        font-size: rem(36px);
+        line-height: 170%;
+        text-align: center;
+        color: #fff;
+        text-transform: uppercase;
+        max-width: 380px;
+        height: 270px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 10;
+
+
+        &::before {
+            content: '';
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 270px;
+            border: 1px solid #FFFFFF;
+            position: absolute;
+            border-radius: 50%;
+        }
+    }
+}
+
+.slogan-ticker {
+
+    &__wrap {
+        position: relative;
+    }
+
+    &__ticker {
+        margin-bottom: rem(32px);
+    }
+
+    &__ticker-item {
+        margin-left: rem(24px);
+    }
+
+    &__ball {
+        position: absolute;
+        left: 0;
+        top: 0;
+        margin: auto;
+        width: 220px;
+        height: 220px;
+        animation: ballBounce 30s linear infinite;
+        animation-fill-mode: forwards;
+
+        &-img {
+            position: relative;
+            z-index: 10;
+        }
+
+        &-light {
+            width: 420px;
+            height: 420px;
+            position: absolute;
+
+            &--scarlet {
+                left: -100px;
+                top: -220px;
+                background: radial-gradient(50% 50% at 50% 50%, rgba(203, 19, 106, 0.7) 0%, rgba(204, 32, 88, 0.4) 41%, rgba(206, 49, 63, 0) 100%);
+            }
+
+            &--indigo {
+                left: -250px;
+                top: 20px;
+                background: radial-gradient(50% 50% at 50% 50%, rgba(140, 16, 255, 0.8) 0%, rgba(139, 37, 226, 0.6) 23%, rgba(136, 85, 162, 0.17) 76%, rgba(135, 104, 137, 0) 100%);
+            }
+
+            &--coral {
+                right: -160px;
+                top: 30px;
+                background: radial-gradient(50% 50% at 50% 50%, rgba(0, 135, 212, 0.8) 0%, rgba(22, 137, 194, 0.52) 32%, rgba(53, 141, 170, 0.15) 79%, rgba(65, 142, 161, 0) 100%);
+            }
+        }
+    }
+}
+
+.advantage-block {
+
+    &__wrap {
+        display: flex;
+        align-items: center;
+        height: 100vh;
+    }
+
+    &__video {
+        height: 740px;
+        position: absolute;
+        left: -200px;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        transition: 700ms;
+
+
+        @include media-breakpoint-down(xl) {
+            left: -400px;
+        }
+
+        &--hidden {
+            opacity: 0;
+            transition: 300ms;
+        }
+    }
+
+    &__info {
+        position: relative;
+        margin-left: auto;
+        width: 100%;
+        max-width: 360px;
+        padding-right: 0;
+        z-index: 10;
+        transition: 700ms;
+
+        &--hidden {
+            opacity: 0;
+            transition: 300ms;
+        }
+    }
+
+    &__heading {
+        font-size: rem(28px);
+        font-weight: 400;
+        color: #fff;
+        margin-bottom: rem(32px);
+        text-transform: uppercase;
+    }
+
+    &__btns {
+        display: flex;
+        align-items: center;
+        margin-bottom: rem(36px);
+    }
+
+    &__btn {
+        @extend %btn-outline;
+        margin-right: rem(20px);
+        font-size: rem(14px);
+    }
+}
+
+.shops-list {
+    &__wrap {
+        padding: rem(170px 0);
+    }
+
+    &__img {
+        width: 100%;
+        max-width: 620px;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    &__heading {
+        font-size: rem(36px);
+        color: #fff;
+        font-weight: 300;
+        margin-bottom: rem(80px);
+    }
+
+    &__subheading {
+        font-size: rem(18px);
+        color: #fff;
+        margin-bottom: rem(42px);
+        text-transform: uppercase;
+    }
+
+    &__list {
+        @include unlist;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    &__item {
+        margin-right: rem(26px);
+    }
+
+    &__link {
+        text-decoration: none;
+        color: #fff;
+        font-size: rem(18px);
+        display: block;
+        text-align: center;
+
+        &-img {
+            display: block;
+            width: 72px;
+            height: 72px;
+            margin: auto;
+            margin-bottom: rem(12px);
+
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 15px;
+                object-fit: cover;
+            }
+        }
+
+        &:hover {
+            color: #fff;
+
+        }
+    }
+}
+
+.faq {
+
+    &__heading {
+        font-size: rem(44px);
+        color: #fff;
+        margin-bottom: rem(64px);
+    }
+
+    &__list {
+        @include unlist;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: rem(22px 115px);
+    }
+
+
+}
+
+.faq-item {
+    &__toggler {
+        font-size: rem(22px);
+        color: #fff;
+        padding: rem(22px 8px);
+        border-bottom: 1px solid #FFFFFF;
+        display: flex;
+        width: 100%;
+        position: relative;
+
+        &::before {
+            content: '';
+            width: 2px;
+            height: 20px;
+            background-color: #fff;
+            position: absolute;
+            right: 9px;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            transition: 350ms;
+        }
+
+        &::after {
+            content: '';
+            width: 20px;
+            height: 2px;
+            background-color: #fff;
+            position: absolute;
+            right: 0;
+            top: 1px;
+            bottom: 0;
+            margin: auto;
+            transition: 350ms;
+        }
+
+        &--expanded {
+            &::before {
+                opacity: 0;
+                transition: 350ms;
+            }
+        }
+    }
+
+    &__content {
+        color: #fff;
+        padding: rem(22px 8px);
+        display: none;
     }
 }
