--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -5,9 +5,9 @@ html {
         overflow: hidden;
     }
 
-    @include media-breakpoint-down(lg) {
+/*     @include media-breakpoint-down(lg) {
         font-size: 14px;
-    }
+    } */
 
     @include media-breakpoint-down(md) {
         font-size: 13px;
