--- a/src/assets/scss/pages/_frontpage.scss
+++ b/src/assets/scss/pages/_frontpage.scss
@@ -45,7 +45,7 @@ $shadows-big: multiple-box-shadow(100);
     }
 
     &__foot {
-        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background: linear-gradient(-45deg, #e4569e, #e4569e, #23a6d5, #23d5ab);
         background-size: 400% 400%;
         animation: gradient 15s ease infinite;
     }
@@ -71,7 +71,7 @@ $shadows-big: multiple-box-shadow(100);
         &::after {
             content: "";
             position: absolute;
-            top: 3000px;
+            top: 2000px;
             background: transparent;
         }
 
@@ -183,6 +183,7 @@ $shadows-big: multiple-box-shadow(100);
         text-transform: uppercase;
         text-align: center;
         margin-bottom: rem(86px);
+        font-weight: 400;
     }
 
     &__carousel {
@@ -198,6 +199,7 @@ $shadows-big: multiple-box-shadow(100);
             align-items: center;
             justify-content: center;
             margin: auto;
+            z-index: 100;
 
             &--prev {
                 left: 0;
@@ -207,6 +209,22 @@ $shadows-big: multiple-box-shadow(100);
                 right: 0;
             }
         }
+
+        .flickity-page-dots {
+            bottom: -75px;
+
+            .dot {
+                border: 1px solid #FFFFFF;
+                background: transparent;
+                opacity: 1;
+                width: 24px;
+                height: 24px;
+
+                &.is-selected {
+                    background-color: #fff;
+                }
+            }
+        }
     }
 
     &__clouds-wrap {
@@ -214,49 +232,21 @@ $shadows-big: multiple-box-shadow(100);
         height: 50vh;
         width: 100vw;
         top: 30vh;
-        transform: translateX(0);
-        animation: clouds 200s linear infinite;
-        animation-fill-mode: backwards;
+/*         animation: clouds 200s linear infinite;
+        animation-fill-mode: backwards; */
     }
 
     &__clouds {
-        position: absolute;
-
-        &:nth-of-type(2) {
-            left: 60vw;
-        }
-
-        &:nth-of-type(3) {
-            left: -60vw;
-        }
+       /*  position: absolute;
+        top: -430px; */
     }
 
 
-    &__cloud {
+/*     &__cloud {
         position: absolute;
         z-index: 0;
         display: block;
-
-        &--1 {
-            left: -60px;
-            top: -220px;
-        }
-
-        &--2 {
-            top: -220px;
-            right: -30px;
-        }
-
-        &--3 {
-            left: -150px;
-            bottom: -40px;
-        }
-
-        &--4 {
-            right: -150px;
-            bottom: -40px;
-        }
-    }
+    } */
 
     &__case-item {
         width: 100%;
@@ -271,7 +261,7 @@ $shadows-big: multiple-box-shadow(100);
         text-align: center;
         max-width: 655px;
         width: 100%;
-        margin: rem(60px auto);
+        margin: rem(80px auto);
         position: relative;
         display: flex;
         align-items: center;
@@ -423,6 +413,7 @@ $shadows-big: multiple-box-shadow(100);
         color: #fff;
         margin-bottom: rem(32px);
         text-transform: uppercase;
+        font-family: 'Helvetica', sans-serif;
     }
 
     &__btns {
@@ -491,6 +482,8 @@ $shadows-big: multiple-box-shadow(100);
             height: 72px;
             margin: auto;
             margin-bottom: rem(12px);
+            border-radius: 15px;
+            box-shadow: 0px 0px 45px 5px rgba(255, 255, 255, 0.7);
 
             img {
                 width: 100%;
