--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -13,7 +13,7 @@
 
     <div class="footer__content">
         <div class="container">
-            <div class="row">
+            <div class="row footer__row">
                 <div class="col-md-4">
                     <div class="footer__footer-contacts footer-contacts">
                         <ul class="footer-contacts__list">
