--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -12,6 +12,11 @@
     text-transform: uppercase;
     text-decoration: none;
 
+    @include media-breakpoint-down(sm) {
+        font-size: rem(16px);
+        padding: rem(14px 20px);
+    }
+
     svg path {
         transition: 350ms;
     }
